--- a/fields5.html
+++ b/fields5.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fields - Front End</title>
+    <title>Fields - UX Designer</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -80,13 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/field1.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/field5.jpg" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
-                <h3>Front End Developer</h3>
-                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.
-                    The objective of designing a site is to ensure that when the users open up the site they see the information in a format that is easy to read and relevant. This is further complicated by the fact that users now use a large variety of devices with varying screen sizes and resolutions thus forcing the designer to take into consideration these aspects when designing the site. They need to ensure that their site comes up correctly in different browsers (cross-browser), different operating systems (cross-platform) and different devices (cross-device), which requires careful planning on the side of the developer. </p>
+                <h3>UX Designer</h3>
+                <p>Design-related roles exist in a range of areas from industrial design (cars, furniture) to print (magazines, other publications) to tech (websites, mobile apps). With the relatively recent influx of tech companies focused on creating interfaces for screens, many new design roles have emerged. Job titles like UX or UI designer are confusing to the uninitiated and unfamiliar even to designers who come from other industries. UX designers are primarily concerned with how the product feels. A given design problem has no single right answer. UX designers explore many different approaches to solving a specific user problem. The broad responsibility of a UX designer is to ensure that the product logically flows from one step to the next. One way that a UX designer might do this is by conducting in-person user tests to observe one's behavior. By identifying verbal and nonverbal stumbling blocks, they refine and iterate to create the "best" user experience. An example project is creating a delightful onboarding flow for a new user. </p>
             </div>
 
         </div>
