--- a/hosting.html
+++ b/hosting.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hosting</title>
+    <title>Hosting - Free Hosting</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -80,12 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/free.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/host1.jpg" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
                 <h3>Free Hosting</h3>
-                <p>Free hosting is just as the name implies, servers that offer free and usually quite limited hosting to users without any costs. These hosts are a great way to get yourself up and running in the web developement world and get some real practice getting your pages hosted.</p>
+                <p>A free website hosting is a free non-paid web hosting service, usually supports forced ads on subscriber's website for earning revenue. Free web-hosting that does not make use of advertising also exists; these often come with some limits on usage. Free web hosts will usually provide a subdomain (yoursite.example.com) or a directory (www.example.com/~yourname). In contrast, paid web hosts will usually provide a second-level domain along with the hosting (www.yourname.com). Many free hosts do allow use of separately-purchased domains. Rarely, a free host may also operate as a domain name registrar. Many host provide template builders to make website creation easier. There are also some free domain companies which may provide free third level domain names free with DNS and other facilities. Some of such popular free web hosts (also called blog hosts) include Blogger and Wordpress. When websites are created with these free website hosting services, the websites get such names as yoursite.blogspot.com and yoursite.wordpress.com. However, most of the free hosting providers are not considered to be reliable.</p>
             </div>
 
         </div>
@@ -99,32 +99,32 @@
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/free.jpg" alt="">
+                <a href="hosting.html">
+                    <img class="img-responsive portfolio-item" src="img/host1.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="hosting2.html">
+                    <img class="img-responsive portfolio-item" src="img/host2.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="hosting3.html">
+                    <img class="img-responsive portfolio-item" src="img/host3.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="hosting4.html">
+                    <img class="img-responsive portfolio-item" src="img/host4.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="hosting5.html">
+                    <img class="img-responsive portfolio-item" src="img/host5.jpg" alt="">
                 </a>
             </div>
 
