--- a/hosting5.html
+++ b/hosting5.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fields - Front End</title>
+    <title>Hosting - Dedicated Servers</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Web Developer Fields
+                <h1 class="page-header">Web Hosting
                     <small></small>
                 </h1>
             </div>
@@ -80,13 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/field1.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/host5.jpg" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
-                <h3>Front End Developer</h3>
-                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.
-                    The objective of designing a site is to ensure that when the users open up the site they see the information in a format that is easy to read and relevant. This is further complicated by the fact that users now use a large variety of devices with varying screen sizes and resolutions thus forcing the designer to take into consideration these aspects when designing the site. They need to ensure that their site comes up correctly in different browsers (cross-browser), different operating systems (cross-platform) and different devices (cross-device), which requires careful planning on the side of the developer. </p>
+                <h3>Dedicated Servers</h3>
+                <p>A dedicated hosting service, dedicated server, or managed hosting service is a type of Internet hosting in which the client leases an entire server not shared with anyone else. This is more flexible than shared hosting, as organizations have full control over the server(s), including choice of operating system, hardware, etc. There is also another level of dedicated or managed hosting commonly referred to as complex managed hosting. Complex Managed Hosting applies to both physical dedicated servers, Hybrid server and virtual servers, with many companies choosing a hybrid (combination of physical and virtual) hosting solution. There are many similarities between standard and complex managed hosting but the key difference is the level of administrative and engineering support that the customer pays for – owing to both the increased size and complexity of the infrastructure deployment. The provider steps in to take over most of the management, including security, memory, storage and IT support.</p>
             </div>
 
         </div>
@@ -100,32 +99,32 @@
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/field1.jpg" alt="">
+                <a href="hosting.html">
+                    <img class="img-responsive portfolio-item" src="img/host1.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields2.html">
-                    <img class="img-responsive portfolio-item" src="img/field2.jpg" alt="">
+                <a href="hosting2.html">
+                    <img class="img-responsive portfolio-item" src="img/host2.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields3.html">
-                    <img class="img-responsive portfolio-item" src="img/field3.jpg" alt="">
+                <a href="hosting3.html">
+                    <img class="img-responsive portfolio-item" src="img/host3.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields4.html">
-                    <img class="img-responsive portfolio-item" src="img/field4.jpg" alt="">
+                <a href="hosting4.html">
+                    <img class="img-responsive portfolio-item" src="img/host4.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields5.html">
-                    <img class="img-responsive portfolio-item" src="img/field5.jpg" alt="">
+                <a href="hosting5.html">
+                    <img class="img-responsive portfolio-item" src="img/host5.jpg" alt="">
                 </a>
             </div>
 
