--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <title>Web Development</title>
 
     <!-- Bootstrap Core CSS -->
@@ -85,7 +103,8 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>Welcome to becoming a web developer. The goal of this website is to give you, yes YOU a first hand top down look at the core aspects of entering this challenging and satisfying field. Here you will find information on the different jobs a web developer may undertake as well as the core programming/scripting languages that one would need to know to enter this field. I will also provide information on verious online tools and web hosting options that can make your entry into this field a lot smoother. Enjoy! :) </p>
+                <p>Welcome to becoming a web developer. The goal of this website is to give you, yes YOU a first hand top down look at the core aspects of entering this challenging and satisfying field. Here you will find information on the different jobs a web developer may undertake as well as the core programming/scripting languages that one would need to know to enter this field. I will also provide information on various online tools and web hosting options that can make your entry into this field a lot smoother. First we will go through the different fields of work a web developer may want to pursue. Next we will examine the different computer scripting and programming languages a web developer will need to know in order to be successful. Moving onto tools, that is different online resources that can be very helpful to web developers. Finally we will look at web hosting, and the different types that there are. You will be pleased to find that one can enter the web developer field with only access to a computer. The many tools and online resources are available free of charge to get your education and self learning under way.<br>
+                    <a href="https://docs.google.com/drawings/d/1Li5T4tD1uy9xjAuIF9skXpA4eM056mlWxOPVjG82D3U/edit?usp=sharing">Here is a link to my site map for easier navigation.</a></p>
             </div>
 
         </div>
@@ -100,25 +119,25 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/webdev.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="img/field1.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="img/html.jpg" alt="">
+                <a href="lang.html">
+                    <img class="img-responsive portfolio-item" src="img/lang1.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="img/github.jpg." alt="">
+                <a href="tools.html">
+                    <img class="img-responsive portfolio-item" src="img/tools1.jpg." alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="img/free.jpg" alt="">
+                <a href="hosting.html">
+                    <img class="img-responsive portfolio-item" src="img/host1.jpg" alt="">
                 </a>
             </div>
 
