--- a/lang.html
+++ b/lang.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Languages</title>
+    <title>Languages - HTML</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -80,12 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/html.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/lang1.png" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
                 <h3>HTML</h3>
-                <p>HTML is the backbone of websites, without it, a website could do nothing. Understanding and mastering HTML is essential for any web developer in training as you will no doubt be using it daily.</p>
+                <p>HyperText Markup Language (HTML) is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript it forms a triad of cornerstone technologies for the World Wide Web. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document. HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. Others surround and provide information about document text and may include other tags as sub-elements. Browsers do not display the HTML tags, but use them to interpret the content of the page.</p>
             </div>
 
         </div>
@@ -99,32 +99,32 @@
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/html.jpg" alt="">
+                <a href="lang.html">
+                    <img class="img-responsive portfolio-item" src="img/lang1.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="lang2.html">
+                    <img class="img-responsive portfolio-item" src="img/lang2.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="lang3.html">
+                    <img class="img-responsive portfolio-item" src="img/lang3.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="lang4.html">
+                    <img class="img-responsive portfolio-item" src="img/lang4.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="lang5.html">
+                    <img class="img-responsive portfolio-item" src="img/lang5.png" alt="">
                 </a>
             </div>
 
