--- a/lang2.html
+++ b/lang2.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fields - Front End</title>
+    <title>Languages - CSS</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Web Developer Fields
+                <h1 class="page-header">Web Developer Languages
                     <small></small>
                 </h1>
             </div>
@@ -80,13 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/field1.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/lang2.png" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
-                <h3>Front End Developer</h3>
-                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.
-                    The objective of designing a site is to ensure that when the users open up the site they see the information in a format that is easy to read and relevant. This is further complicated by the fact that users now use a large variety of devices with varying screen sizes and resolutions thus forcing the designer to take into consideration these aspects when designing the site. They need to ensure that their site comes up correctly in different browsers (cross-browser), different operating systems (cross-platform) and different devices (cross-device), which requires careful planning on the side of the developer. </p>
+                <h3>CSS</h3>
+                <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging web pages, user interfaces for web applications, and user interfaces for many mobile applications. CSS is designed primarily to enable the separation of document content from document presentation, including aspects such as the layout, colors, and fonts. This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple HTML pages to share formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.</p>
             </div>
 
         </div>
@@ -100,32 +99,32 @@
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/field1.jpg" alt="">
+                <a href="lang.html">
+                    <img class="img-responsive portfolio-item" src="img/lang1.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields2.html">
-                    <img class="img-responsive portfolio-item" src="img/field2.jpg" alt="">
+                <a href="lang2.html">
+                    <img class="img-responsive portfolio-item" src="img/lang2.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields3.html">
-                    <img class="img-responsive portfolio-item" src="img/field3.jpg" alt="">
+                <a href="lang3.html">
+                    <img class="img-responsive portfolio-item" src="img/lang3.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields4.html">
-                    <img class="img-responsive portfolio-item" src="img/field4.jpg" alt="">
+                <a href="lang4.html">
+                    <img class="img-responsive portfolio-item" src="img/lang4.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields5.html">
-                    <img class="img-responsive portfolio-item" src="img/field5.jpg" alt="">
+                <a href="lang5.html">
+                    <img class="img-responsive portfolio-item" src="img/lang5.png" alt="">
                 </a>
             </div>
 
