--- a/tools.html
+++ b/tools.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Tools</title>
+    <title>Tools - Github</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -80,12 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/github.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/tools1.jpg" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
                 <h3>Github</h3>
-                <p>Github is an online site that offers free version control for open source projects so developers and work together to create a mutual project.</p>
+                <p>One of the most helpful tools a web developer can utilize is Github. GitHub is a web-based Git or version control repository and Internet hosting service. It offers all of the distributed version control and source code management (SCM) functionality of Git as well as adding its own features. It provides access control and several collaboration features such as bug tracking, feature requests, task management, and wikis for every project. GitHub offers both plans for private and free repositories on the same account which are commonly used to host open-source software projects. As of April 2016, GitHub reports having more than 14 million users and more than 35 million repositories, making it the largest host of source code in the world.</p>
             </div>
 
         </div>
@@ -99,32 +99,32 @@
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/github.jpg" alt="">
+                <a href="tools.html">
+                    <img class="img-responsive portfolio-item" src="img/tools1.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="tools2.html">
+                    <img class="img-responsive portfolio-item" src="img/tools2.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="tools3.html">
+                    <img class="img-responsive portfolio-item" src="img/tools3.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="tools4.html">
+                    <img class="img-responsive portfolio-item" src="img/tools4.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="tools5.html">
+                    <img class="img-responsive portfolio-item" src="img/tools5.jpg" alt="">
                 </a>
             </div>
 
