--- a/tools4.html
+++ b/tools4.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fields - Front End</title>
+    <title>Tools - Lynda.com</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Web Developer Fields
+                <h1 class="page-header">Web Developer Tools
                     <small></small>
                 </h1>
             </div>
@@ -80,13 +80,19 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/field1.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/tools4.png" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
-                <h3>Front End Developer</h3>
-                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.
-                    The objective of designing a site is to ensure that when the users open up the site they see the information in a format that is easy to read and relevant. This is further complicated by the fact that users now use a large variety of devices with varying screen sizes and resolutions thus forcing the designer to take into consideration these aspects when designing the site. They need to ensure that their site comes up correctly in different browsers (cross-browser), different operating systems (cross-platform) and different devices (cross-device), which requires careful planning on the side of the developer. </p>
+                <h3>Lynda.com</h3>
+                <p>
+                    lynda.com is an online education company offering thousands of video courses in software, creative, and business skills. Founded in 1995, the company produces video tutorials taught by industry experts. Members have unlimited access to watch the videos, which are primarily educational. On April 9, 2015, LinkedIn announced its purchase of lynda.com for $1.5 billion. Based in Carpinteria, California, lynda.com has more than 500 employees worldwide, and offers instruction in English as well as German, French, and Spanish through its branded division, video2brain.
+                <blockquote>
+                From the lynda.com website: Lynda.com is a leading online learning platform that helps anyone learn business, software, technology and creative skills to achieve personal and professional goals. Through individual, corporate, academic and government subscriptions, members have access to the Lynda.com video library of engaging, top-quality courses taught by recognized industry experts.
+
+                For 20 years, Lynda.com has helped students, leaders, IT and design pros, project managers—anyone in any role—develop software, creative, and business skills. Now part of Linkedin, Lynda.com serves more than 10,000 organizations. With tutorials in five languages, Lynda.com is a global platform for success.
+            </blockquote>
+                </p>
             </div>
 
         </div>
@@ -100,32 +106,32 @@
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/field1.jpg" alt="">
+                <a href="tools.html">
+                    <img class="img-responsive portfolio-item" src="img/tools1.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields2.html">
-                    <img class="img-responsive portfolio-item" src="img/field2.jpg" alt="">
+                <a href="tools2.html">
+                    <img class="img-responsive portfolio-item" src="img/tools2.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields3.html">
-                    <img class="img-responsive portfolio-item" src="img/field3.jpg" alt="">
+                <a href="tools3.html">
+                    <img class="img-responsive portfolio-item" src="img/tools3.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields4.html">
-                    <img class="img-responsive portfolio-item" src="img/field4.jpg" alt="">
+                <a href="tools4.html">
+                    <img class="img-responsive portfolio-item" src="img/tools4.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields5.html">
-                    <img class="img-responsive portfolio-item" src="img/field5.jpg" alt="">
+                <a href="tools5.html">
+                    <img class="img-responsive portfolio-item" src="img/tools5.jpg" alt="">
                 </a>
             </div>
 
