--- a/hosting2.html
+++ b/hosting2.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fields - Front End</title>
+    <title>Hosting - Paid Hosting</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Web Developer Fields
+                <h1 class="page-header">Web Hosting
                     <small></small>
                 </h1>
             </div>
@@ -80,13 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/field1.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/host2.png" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
-                <h3>Front End Developer</h3>
-                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.
-                    The objective of designing a site is to ensure that when the users open up the site they see the information in a format that is easy to read and relevant. This is further complicated by the fact that users now use a large variety of devices with varying screen sizes and resolutions thus forcing the designer to take into consideration these aspects when designing the site. They need to ensure that their site comes up correctly in different browsers (cross-browser), different operating systems (cross-platform) and different devices (cross-device), which requires careful planning on the side of the developer. </p>
+                <h3>Paid Hosting</h3>
+                <p>Web hosting is the service that makes your website available to be viewed by others on the Internet. A web host provides space on its server, so that other computers around the world can access your website by means of a network or modem. There are literally thousands of web hosting services available today, ranging from free services with limited options to expensive, specialized business web hosting services. Which option you choose depends primarily on how you plan to use your website and how much you want to spend. With paid hosting, you pay a fee for space and services on a web hosting provider's server. Monthly fees can range from a few dollars to several hundred dollars. Obviously, the more you pay, the more features you should have at your disposal. Services can include CGI access, database support, ASP, e-commerce, SSL, additional space on the server, extra bandwidth, and more.</p>
             </div>
 
         </div>
@@ -100,32 +99,32 @@
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/field1.jpg" alt="">
+                <a href="hosting.html">
+                    <img class="img-responsive portfolio-item" src="img/host1.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields2.html">
-                    <img class="img-responsive portfolio-item" src="img/field2.jpg" alt="">
+                <a href="hosting2.html">
+                    <img class="img-responsive portfolio-item" src="img/host2.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields3.html">
-                    <img class="img-responsive portfolio-item" src="img/field3.jpg" alt="">
+                <a href="hosting3.html">
+                    <img class="img-responsive portfolio-item" src="img/host3.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields4.html">
-                    <img class="img-responsive portfolio-item" src="img/field4.jpg" alt="">
+                <a href="hosting4.html">
+                    <img class="img-responsive portfolio-item" src="img/host4.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields5.html">
-                    <img class="img-responsive portfolio-item" src="img/field5.jpg" alt="">
+                <a href="hosting5.html">
+                    <img class="img-responsive portfolio-item" src="img/host5.jpg" alt="">
                 </a>
             </div>
 
