--- a/tools3.html
+++ b/tools3.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fields - Front End</title>
+    <title>Tools - UTF-8</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Web Developer Fields
+                <h1 class="page-header">Web Developer Tools
                     <small></small>
                 </h1>
             </div>
@@ -80,13 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/field1.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/tools3.png" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
-                <h3>Front End Developer</h3>
-                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.
-                    The objective of designing a site is to ensure that when the users open up the site they see the information in a format that is easy to read and relevant. This is further complicated by the fact that users now use a large variety of devices with varying screen sizes and resolutions thus forcing the designer to take into consideration these aspects when designing the site. They need to ensure that their site comes up correctly in different browsers (cross-browser), different operating systems (cross-platform) and different devices (cross-device), which requires careful planning on the side of the developer. </p>
+                <h3>UTF-8</h3>
+                <p>UTF-8 is a character encoding capable of encoding all possible characters, or code points, defined by Unicode and originally designed by Ken Thompson and Rob Pike. The encoding is variable-length and uses 8-bit code units. It was designed for backward compatibility with ASCII and to avoid the complications of endianness and byte order marks in the alternative UTF-16 and UTF-32 encodings. The name is derived from Unicode (or Universal Coded Character Set) Transformation Format – 8-bit. UTF-8 is the dominant character encoding for the World Wide Web, accounting for 88.7% of all Web pages in March 2017 (the most popular East Asian encodings, Shift JIS and GB 2312, have 1.0% and 0.7% respectively). The Internet Mail Consortium (IMC) recommended that all email programs be able to display and create mail using UTF-8, and the W3C recommends UTF-8 as the default encoding in XML and HTML.</p>
             </div>
 
         </div>
@@ -100,32 +99,32 @@
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/field1.jpg" alt="">
+                <a href="tools.html">
+                    <img class="img-responsive portfolio-item" src="img/tools1.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields2.html">
-                    <img class="img-responsive portfolio-item" src="img/field2.jpg" alt="">
+                <a href="tools2.html">
+                    <img class="img-responsive portfolio-item" src="img/tools2.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields3.html">
-                    <img class="img-responsive portfolio-item" src="img/field3.jpg" alt="">
+                <a href="tools3.html">
+                    <img class="img-responsive portfolio-item" src="img/tools3.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields4.html">
-                    <img class="img-responsive portfolio-item" src="img/field4.jpg" alt="">
+                <a href="tools4.html">
+                    <img class="img-responsive portfolio-item" src="img/tools4.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-2 col-xs-6">
-                <a href="fields5.html">
-                    <img class="img-responsive portfolio-item" src="img/field5.jpg" alt="">
+                <a href="tools5.html">
+                    <img class="img-responsive portfolio-item" src="img/tools5.jpg" alt="">
                 </a>
             </div>
 
